Fixing errors in ExpenseTrackerController